Whitespace fixes on homepage

--- a/src/styles/home.styl
+++ b/src/styles/home.styl
@@ -1,6 +1,11 @@
 /*
   Homepage
 */
+
+.ui.dividing.header
+  margin 2rem 0 !important
+  padding-bottom 1rem
+
 #slideshow
   position relative
   margin 0
@@ -49,6 +54,7 @@
 .founded
   display inline-block
   font-size 1.4rem
+  line-height 2.8rem
   margin 2rem
 
 #services, #projects, #articles
@@ -126,6 +132,7 @@
       object-position left
 
 #articles
+  padding-bottom 2rem
   .column
     overflow hidden
     h3
